<resources>
    <string name="app_name">  QuizApp</string>
    <string name="action_settings">Settings</string>
    <string name="android">What is Android</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="powered">Powered By : WEBELEMENT SOLUTIONS LIMITED</string>
    <string name="nointernet">No Internet Connection</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="inbox_string">Inbox</string>
    <string name="openDrawer">Close</string>
    <string name="closeDrawer">Close</string>
    <string name="logout">Logout</string>
    <string name="cpassword">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="new_here">New here ?</string>
    <string name="signup"><u>sign up</u></string>
    <string name="register">Register</string>
    <string name="my_examination">My Examinations</string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="enter">Enter your registered email address we will \nsend you a link to reset  your password</string>
    <string name="reset">Reset My Password</string>
    <string name="email">Registered Email</string>
</resources>
