<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_bg"
           >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/logo_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/login_layout"
                    android:layout_centerHorizontal="true"

                    android:layout_marginBottom="@dimen/activity_vertical_margin">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/logo_round"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/logo"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/login_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:background="@color/bg_op1"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_vertical_margin">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/usernameWrapper"
                        style="@style/TextAppearance.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"

                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:hint="@string/username"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/passwordWrapper"
                        style="@style/TextAppearance.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                        <EditText
                            android:id="@+id/pwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:background="@color/grey"
                        android:text="@string/login"
                        android:textColor="@color/white" />


                </LinearLayout>

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@+id/login_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/forgot_pwd"
                    android:textSize="@dimen/_14sp"
                    android:textStyle="bold"
                    android:visibility="visible" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/bottom_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/new_here"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/new_here"
                    android:textSize="@dimen/_14sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_toRightOf="@+id/new_here"
                    android:text="@string/signup"
                    android:textSize="@dimen/_14sp"
                    android:visibility="visible" />
            </RelativeLayout>
        </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
